--- a/styles/layouat.css
+++ b/styles/layouat.css
@@ -1,36 +1,49 @@
-body{
+body {
   font-family: Arial, Helvetica, sans-serif;
   color: #333;
   background-color: #ccc;
-  margin: 1em 10%;  
+  margin: 1em 10%;
 }
-h1{
+
+h1 {
   color: #333;
   background-color: transparent;
 }
-ul{
+
+ul {
   padding: 0;
+  list-style: none;
 }
-li{
+
+li {
+  display: inline;
   float: left;
   padding: 1em;
-list-style: none;
+  list-style: none;
 }
-a{
+
+a {
   color: #C60;
   background-color: transparent;
   font-weight: bold;
   text-decoration: none;
 }
-a:hover{
+a>img{
+  width: 60px;
+  height: 50px;
+  border: 0;
+}
+a:hover {
   color: #f44336;
 }
-a:focus{
+
+/* a:focus {
   padding: 10px;
   background-color: #f44336;
   color: #fff;
-}
-.img_box>img{
+} */
+
+.img_box>img {
   display: block;
   clear: both;
   width: 400px;
